# etherscan-bad-replica

./: .env  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  docker-compose.yaml  plan.md
auth_example_student_not_allowed/: Cargo.toml
auth_example_student_not_allowed/src/: errors.rs  main.rs  models.rs  settings.rs  utils.rs
auth_example_student_not_allowed/src/handlers/: api_key.rs  auth.rs  mod.rs
auth_example_student_not_allowed/src/middleware/: auth.rs  rate_limit.rs  request_id.rs
auth_example_student_not_allowed/src/services/: api_key.rs  auth.rs  rate_limit.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs
crates/api/src/routes/: addresses.rs  blocks.rs  mod.rs  transactions.rs
crates/auth/: .env  Cargo.toml
crates/auth/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  utils.rs
crates/auth/src/handlers/: auth.rs  usage.rs
crates/auth/src/middleware/: auth.rs  rate_limit.rs  request_id.rs
crates/auth/src/services/: api_key.rs  auth.rs  mod.rs  rate_limit.rs
crates/common/: .env  Cargo.toml
crates/common/src/: db.rs  types.rs
crates/contract-builder/: Cargo.toml
crates/sync/: Cargo.toml
crates/sync/src/: fetcher.rs  lib.rs  main.rs  processor.rs  watcher.rs  writer.rs
migrations/: 001_create_blocks.sql  003_create_logs.sql  004_create_tokens.sql  006_create_sync_state.sql  007_create_auth_tables.sql
migrations/api/: 002_create_transactions.sql  005_create_contracts.sql
migrations/auth/: 001_create_users.sql  002_create_api_keys.sql  003_create_usage_logs.sql  004_create_refresh_tokens.sql
