[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
thiserror = "2.0.18"
alloy = { version = "1.5.2", features = ["full"] }
alloy-primitives = { version = "1.5.2", features = ["postgres"] }
